--- a/web/src/src/app/app.component.html
+++ b/web/src/src/app/app.component.html
@@ -3,4 +3,6 @@ Este componente es nuestro elemento principal de la aplicación. En él se pone 
 y el <router-outlet></router-outlet> es el elemento que alvergara el contenido dinámico redireccionado por el router => routing.module.ts
 -->
 <navbar></navbar>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
