--- a/web/src/src/app/components/navbar/navbar.component.html
+++ b/web/src/src/app/components/navbar/navbar.component.html
@@ -1,28 +1,26 @@
-<!-- core/navbar.component.html -->
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded" style="background-color: #e3f2fd;">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-          aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#">SINTEC</a>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/reporte_one" routerLinkActive="active">
-          Reporte Principal</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">Reporte Dos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">Reporte Tres</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/reporte_five" routerLinkActive="active">
-          Reporte Inventario</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<div class="container">
+  <!-- Static navbar -->
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Sintec</a>
+        <ul class="dropdown-menu">
+          <li role="separator" class="divider"></li>
+          <li><a class="nav-link" routerLink="/reporte_one" routerLinkActive="active">Otro Reporte</a>
+          </li>
+          <li><a class="nav-link" routerLink="/desplazamiento_inventario" routerLinkActive="active">Desplazamiento de
+            Inventario</a>
+          </li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+    </div><!--/.container-fluid -->
+  </nav>
+</div>
