se agrega servicio para transporte de datos

--- a/web/src/src/app/reporte-desplazamiento-inventario/reporte-desplazamiento-inventario.component.html
+++ b/web/src/src/app/reporte-desplazamiento-inventario/reporte-desplazamiento-inventario.component.html
@@ -261,9 +261,9 @@
   </div>
   <app-desplazamiento-inventario-chart></app-desplazamiento-inventario-chart>
 </div>
-<div class="row">
+<!--<div class="row">
   <app-scatter-plot-chart></app-scatter-plot-chart>
-</div>
-<div class="row">
+</div>-->
+<!--<div class="row">
   <app-heat-chart></app-heat-chart>
-</div>
+</div>-->
